--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <useFile>false</useFile>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
